--- a/KGK_website/package.json
+++ b/KGK_website/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/iiVi/kgk",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "morgan": "^1.6.1",
